force-app/main/default/objects/Tool_Market__c/Tool_Market__c.object-meta.xml
<CustomObject>
    <label>Tool Market</label>
    <nameField>
        <label>Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tool Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>