force-app/main/default/objects/Tool_Market__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You are willing to barter for cash.</inlineHelpText>
    <label>Cash</label>
    <type>Checkbox</type>
</CustomField>