force-app/main/default/objects/Tool_Market__c/fields/Cash_Value_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Value_Per_Unit__c</fullName>
    <label>Cash Value Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>