force-app/main/default/objects/Tool_Market__c/fields/Exchange_Requests_Awaiting_Approval__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Requests_Awaiting_Approval__c</fullName>
    <label>Exchange Requests Awaiting Approval</label>
    <summaryFilterItems>
        <field>Tool_Exchange__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Approval, In Review</value>
    </summaryFilterItems>
    <summaryForeignKey>Tool_Exchange__c.Tool_Exchanged__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>