force-app/main/default/objects/Tool_Market__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <description>This is what the tool typically sells for on the market.</description>
    <inlineHelpText>What is this tool worth on the market based on its current condition?</inlineHelpText>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>