force-app/main/default/objects/Tool_Market__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>How many do you have available to exchange?</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>