force-app/main/default/objects/Tool_Market__c/fields/Quantity_Left_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Left_Available__c</fullName>
    <formula>Quantity__c  -  Total_Quantity_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Left Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>