force-app/main/default/objects/Tool_Market__c/fields/Tool_Description__c.field-meta.xml
<CustomField>
    <fullName>Tool_Description__c</fullName>
    <inlineHelpText>Give a description of your tool.  Include pictures if you have any.</inlineHelpText>
    <label>Tool Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>