force-app/main/default/objects/Tool_Market__c/fields/ToolBank_Owner__c.field-meta.xml
<CustomField>
    <fullName>ToolBank_Owner__c</fullName>
    <formula>Owner:User.CompanyName</formula>
    <label>ToolBank Owner</label>
    <type>Text</type>
</CustomField>