force-app/main/default/objects/Tool_Market__c/fields/Tools__c.field-meta.xml
<CustomField>
    <fullName>Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You are willing to barter for another tool.</inlineHelpText>
    <label>Tools</label>
    <type>Checkbox</type>
</CustomField>