force-app/main/default/objects/Tool_Market__c/fields/Total_Quantity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Approved__c</fullName>
    <label>Total Quantity Approved</label>
    <summarizedField>Tool_Exchange__c.Quantity_Requested__c</summarizedField>
    <summaryFilterItems>
        <field>Tool_Exchange__c.Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Tool_Exchange__c.Tool_Exchanged__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>