force-app/main/default/objects/Tool_Market__c/recordTypes/Barter.recordType-meta.xml
<RecordType>
    <fullName>Barter</fullName>
    <active>true</active>
    <description>You are willing to barter your tools for either cash, another tool, or both.</description>
    <label>Barter</label>
</RecordType>