force-app/main/default/objects/Tool_Market__c/recordTypes/Give_Away.recordType-meta.xml
<RecordType>
    <fullName>Give_Away</fullName>
    <active>true</active>
    <description>You are willing to give away these tools for nothing in exchange.</description>
    <label>Give Away</label>
</RecordType>