force-app/main/default/objects/Tool_Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ToolBank_Owner__c</columns>
    <columns>Quantity__c</columns>
    <columns>Quantity_Left_Available__c</columns>
    <columns>Market_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Tool Market Items</label>
</ListView>