force-app/main/default/objects/Tool_Market__c/listViews/Tool_Market_Give_Away.listView-meta.xml
<ListView>
    <fullName>Tool_Market_Give_Away</fullName>
    <columns>NAME</columns>
    <columns>ToolBank_Owner__c</columns>
    <columns>Quantity__c</columns>
    <columns>Quantity_Left_Available__c</columns>
    <columns>Market_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tool_Market__c.Give_Away</value>
    </filters>
    <label>Tool Market: Give Away</label>
</ListView>